--- a/build.gradle
+++ b/build.gradle
@@ -21,11 +21,11 @@ version = '0.2'
 group = 'ml.northwestwind.netherislands' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'netherislands'
 
-java.toolchain.languageVersion = JavaLanguageVersion.of(8)
+java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
 minecraft {
-    mappings channel: 'official', version: '1.16.5'
+    mappings channel: 'official', version: '1.18.2'
     runs {
         client {
             workingDirectory project.file('run')
@@ -34,6 +34,7 @@ minecraft {
             property 'forge.enabledGameTestNamespaces', 'netherislands'
             property 'mixin.env.remapRefMap', 'true'
             property 'mixin.env.refMapRemappingFile',"${buildDir}/createSrgToMcp/output.srg"
+            property 'mixin.debug.export', 'true'
 
             mods {
                 netherislands {
@@ -92,13 +93,13 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.16.5-36.2.39'
+    minecraft 'net.minecraftforge:forge:1.18.2-40.1.73'
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 }
 
 jar {
     manifest {
-        classifier '1.16.5'
+        classifier '1.18.2'
         attributes([
                 "Specification-Title"     : "netherislands",
                 "Specification-Vendor"    : "netherislands",
