--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,1 @@
-# eclipse
-bin
-*.launch
-.settings
-.metadata
-.classpath
-.project
-
-# idea
-out
-*.ipr
-*.iws
-*.iml
-.idea
-
-# gradle
-build
-.gradle
-
-# other
-eclipse
-run
-deps
-
-# Files from Forge MDK
-forge*changelog.txt
+dist
